<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BreakOut</string>

    <string name="intentaction_locationservice" translatable="false">breakout.intent.action.locationService</string>
    <string name="intentaction_updatelist" translatable="false">breakout.intent.action.updateLocation</string>
    <string name="PREFERENCES_GLOBAL" translatable="false">BreakOutPreferences</string>
    <string name="PREFERENCE_CURRENTLY_LOCATING" translatable="false">IsCurrentlyLocating</string>
    <string name="PREFERENCE_IS_TEST" translatable="false">isTestPhase</string>
    <string name="PREFERENCE_URL" translatable="false">connectionUrl</string>
    <string name="PREFERENCE_CLIENTID" translatable="false">clientId</string>
    <string name="PREFERENCE_CLIENTSECRET" translatable="false">clientSecret</string>
    <string name="PREFERENCE_TRACKING_ENABLED" translatable="false">backgroundTracking</string>
    <string name="account_not_created">The account could not be created.</string>
    <string name="button_continue">next</string>
    <string name="error">Error</string>
    <string name="explanation_participate">By pressing the register button I bindingly register to the event and accept to pay the event fee of 30.00€ as soon as I created a team.</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_email">Email</string>
    <string name="hint_emergency_number">Emergency number</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_hometown">Hometown</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">phone number</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_t_shirt_size">T-shirt size</string>
    <string name="login_failed">The login on the server failed.</string>
    <string name="participate_failed">Could not make you a participant.</string>
    <string name="registration_successful_title">Account created</string>
    <string name="registration_successful_text">Your account has successfully been created!\nPlease check your emails to activate your account.</string>
    <string name="tooltip_username_password">Please enter an email and a password.</string>
    <string name="textview_about">What is BreakOut?</string>
    <string name="button_login">Login</string>
    <string name="button_participate_fee_required">Participate (fee required)</string>
    <string name="button_register">Register</string>
    <string name="button_start_register">Register for free</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="t_shirt_size_array">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>

    <string-array name="event_city_array">
        <item>Berlin</item>
        <item>Munich</item>
    </string-array>

    <string name="button_participate">Participate</string>
    <string name="hint_team_name">Your team name</string>
    <string name="hint_email_partner">Email of your partner</string>
    <string name="button_create_team">Create team</string>
    <string name="explanation_create_team">To participate in the event you also have to create a team. Invite your team partner via email and upload a photo now or later.</string>
    <string name="almost_done">Almost done!</string>
    <string name="early_bird_welcome_title">It will start soon!</string>
    <string name="tooltip_mandatory_field">This is a mandatory field.</string>
    <string name="tooltip_no_valid_phone_number">This is not a valid phone number.</string>
    <string name="hint_event_city">Event city</string>
    <string name="explanation_gender">We need to know your gender to find the right t-shirt for you.</string>
    <string name="explanation_t_shirt_size">We need to know your t-shirt size to find the right t-shirt for you.</string>
    <string name="explanation_phone_number">We need to know your phone number to be able to directly contact you.</string>
    <string name="explanation_emergency_number">Please enter a phone number here, which we ca call in the case of an emergency.</string>
    <string name="explanation_birthday">You have to be at least 18 years old to participate in BreakOut.</string>
    <string name="explanation_event_city">In which city do you want to start your BreakOut advanture?</string>
    <string name="tooltip_no_valid_email">This is not a valid email.</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="title_what_is_breakout">What is BreakOut?</string>
    <string name="button_choose_profile_picture">Choose profile picture</string>
    <string name="event_information">Event information</string>
    <string name="hint_change_password">Change password</string>
    <string name="hint_start_city">Start city</string>
    <string name="hint_password_not_editable">Password not editable</string>
    <string name="save">Save</string>
    <string name="explanation_changes_will_be_lost">Your changes will be lost. To you still want to continue?</string>
    <string name="user_information">User information</string>
    <string name="title_profile">Profile</string>
    <string name="choose_source">Choose source</string>
    <string name="info_obtaining_location">Obtaining current location…</string>
    <string name="title_newPost">New post</string>
    <string name="title_allPosts">All posts</string>
    <string name="title_help">Help</string>
    <string name="hint_postComment">What are you doing?</string>
    <string name="message">Message</string>
    <string name="activate_location_services">Please activate your location services!</string>

    <string name="toast_login_first">You have to log in first!</string>

    <string name="title_activity_maps">Map</string>

    <string name="from">from</string>

    <string name="progress_please_wait">please wait...</string>
    <string name="early_bird_welcome_text_visitor">We are currently working on making the app perfect for your trip around the world. Login to continue</string>
    <string name="early_bird_welcome_text">We are currently working on making the app perfect for your trip around the world.</string>

    <string name="choose_challenge">Choose challenge (optional)</string>

    <string name="emergencytitle_medical">Medical emergency</string>
    <string name="emergency_medical_1">Call emergency in europe:</string>
    <string name="emergency_medical_2">Give first aid</string>
    <string name="emergency_last">Inform BreakOut:</string>

    <string name="emergencytitle_police">Police emergency</string>
    <string name="emergency_police_1">Call police in europe:</string>

    <string name="emergencytitle_diplomacic">Diplomatic emergency</string>
    <string name="emergency_diplomatic_1">Call emergency service of the Ministry of Foreign Affair</string>

    <string name="emergencytitle_etc">Every other problem/emergency:</string>
    <string name="emergency_etc_1">You can reach us while the 36 hours of the event around the clock under this number:</string>

    <string name="number_emergency" translatable="false">112</string>
    <string name="number_breakout" translatable="false">+49 211-97531979</string>
    <string name="number_diplomatic" translatable="false">+49 301817 0</string>

    <string name="no_older_postings">There are no older posts</string>
    <string name="no_new_postings">No new posts</string>

    <string name="earlyBird_running_title" translatable="false">BreakOut 2017</string>
    <string name="earlyBird_running_text">Your adventure has started. We wish you unforgettable 36 hours!</string>
    <string name="commentsUpdate">Comments will be added in the next update</string>

    <!-- Menu -->
    <string name="menu_post">Post a status</string>
    <string name="menu_options">Options</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_summary_tracking" translatable="false">Activate background tracking</string>
    <string name="pref_title_tracking" translatable="false">Background tracking</string>
    <string name="pref_summary_test" translatable="false">Activate test mode</string>
    <string name="pref_title_test">Test mode</string>
    <string name="pref_title_url" translatable="false">URL</string>
    <string name="pref_summary_url" translatable="false">Server url</string>
    <string name="pref_title_id" translatable="false">ID</string>
    <string name="pref_summary_clientId" translatable="false">Client ID</string>
    <string name="pref_title_clientSecret" translatable="false">Secret</string>
    <string name="pref_summary_clientSecret" translatable="false">Client secret</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="dialog_create_posting">Creating posting...</string>
    <string name="dialog_upload_challenge">Adding proof for challenge...</string>
    <string name="dialog_upload_media">Uploading media...</string>

    <string name="toast_enable_location">Please enable location services</string>
</resources>
