<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent_50">

    <LinearLayout
        android:id="@+id/ll_enter_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <org.break_out.breakout.ui.views.BOEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/hint_last_name"
                    android:inputType="textCapWords"
                    app:darkMode="true"
                    app:drawableLeft="@drawable/ic_person_white_24dp"/>

                <org.break_out.breakout.ui.views.BOEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="4"
                    android:hint="@string/hint_first_name"
                    android:inputType="textCapWords"
                    app:darkMode="true"/>

            </LinearLayout>

            <org.break_out.breakout.ui.views.BOSpinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender_array"
                android:hint="@string/hint_gender"
                app:darkMode="true"
                app:drawableLeft="@drawable/ic_wc_white_24dp"
                app:drawableRight="@drawable/ic_help_outline_white_24dp"/>

            <org.break_out.breakout.ui.views.BOSpinner
                android:id="@+id/sp_t_shirt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/t_shirt_size_array"
                android:hint="@string/hint_t_shirt_size"
                app:darkMode="true"
                app:drawableLeft="@drawable/ic_tshirt_white_24dp"
                app:drawableRight="@drawable/ic_help_outline_white_24dp"/>

            <org.break_out.breakout.ui.views.BOEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                app:darkMode="true"
                app:drawableLeft="@drawable/ic_phone_white_24dp"
                app:drawableRight="@drawable/ic_help_outline_white_24dp"/>

            <org.break_out.breakout.ui.views.BOEditText
                android:id="@+id/et_emergency_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_emergency_number"
                android:inputType="phone"
                app:darkMode="true"
                app:drawableLeft="@drawable/ic_sos_white_24dp"
                app:drawableRight="@drawable/ic_help_outline_white_24dp"/>

            <org.break_out.breakout.ui.views.BODatePicker
                android:id="@+id/dp_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birthday"
                app:darkMode="true"
                app:drawableLeft="@drawable/ic_cake_white_24dp"
                app:drawableRight="@drawable/ic_help_outline_white_24dp"/>

        </LinearLayout>

        <org.break_out.breakout.ui.views.BOFlatButton
            android:id="@+id/bt_participate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/button_participate"
            app:buttonColor="orange"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/explanation_participate"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_select_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/almost_done"
            android:textColor="@color/white_transparent_50"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/explanation_create_team"
            android:textColor="@color/white_transparent_50"/>

        <org.break_out.breakout.ui.views.BOEditText
            android:id="@+id/et_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_team_name"
            app:darkMode="true"
            android:inputType="textCapWords"
            app:drawableLeft="@drawable/ic_group_white_24dp"/>

        <org.break_out.breakout.ui.views.BOEditText
            android:id="@+id/et_email_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_partner"
            android:inputType="textEmailAddress"
            app:darkMode="true"
            app:drawableLeft="@drawable/ic_mail_outline_white_24dp"/>

        <org.break_out.breakout.ui.views.BOSpinner
            android:id="@+id/sp_event_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/event_city_array"
            android:hint="@string/hint_event_city"
            app:darkMode="true"
            app:drawableLeft="@drawable/ic_location_city_white_24dp"
            app:drawableRight="@drawable/ic_help_outline_white_24dp"/>

        <org.break_out.breakout.ui.views.BOFlatButton
            android:id="@+id/bt_create_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/button_create_team"/>

    </LinearLayout>

</FrameLayout>
