<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_welcome_600dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/early_bird_welcome_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="@dimen/background_activity_width"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/early_bird_welcome_text"
            android:textColor="@color/colorPrimaryDark"/>

        <org.break_out.breakout.ui.views.BOFlatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/button_participate"
            app:buttonColor="orange"/>

    </LinearLayout>
</FrameLayout>