<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/start_relativeLayout_contentWrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="28dp"
    android:paddingBottom="28dp">

    <FrameLayout
        android:id="@+id/popup_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popover_login_white"
        android:paddingBottom="@dimen/popup_margin_bottom"
        android:paddingLeft="@dimen/popup_horizontal_margin"
        android:paddingRight="@dimen/popup_horizontal_margin"
        android:paddingTop="@dimen/popup_margin_top"
        android:visibility="gone">

        <TextView
            android:id="@+id/start_textView_popupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_usernamePassword"/>
    </FrameLayout>

    <EditText
        android:id="@+id/start_editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_mail_outline_white_24dp"
        android:hint="@string/hint_email"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress"
        android:textColor="@color/white_transparent_80"
        android:textColorHint="@color/white_transparent_50"
        android:theme="@style/AppTheme.EditText"/>

    <EditText
        android:id="@+id/start_editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_lock_outline_white_24dp"
        android:hint="@string/hint_password"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        android:textColor="@color/white_transparent_80"
        android:textColorHint="@color/white_transparent_50"
        android:theme="@style/AppTheme.EditText"/>

    <Button
        android:id="@+id/start_button_logIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_rounded_orange_50dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/button_login"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/start_button_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_rounded_white_50dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/button_start_register"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/start_textView_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/textview_about"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"/>

</LinearLayout>